# kinect-linux

./: .gitignore  CMakeLists.txt  main.cpp  pk_kinect.cpp  pk_kinect.h
